--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ Flask-BabelEx==0.9.2
 Flask-Cors==2.1.0
 Flask-DebugToolbar==0.10.0
 Flask-Fixtures==0.3.3
+Flask-Marshmallow==0.6.2
 Flask-Migrate==1.4.0
 Flask-OAuthlib==0.9.1
 Flask-RESTful==0.3.3
 Flask-SQLAlchemy==1.0
 Flask-Script==2.0.5
+Flask-Security
 Flask-WTF==0.11
 Flask==0.10.1
 SQLAlchemy==0.9.8
@@ -15,9 +17,10 @@ Werkzeug==0.10.4
 flatdict==1.2.0
 gunicorn==19.3.0
 inflection==0.3.1
+marshmallow-sqlalchemy==0.8.0
 psycopg2==2.6.1
 python-dateutil==2.4.2
 pyyaml==3.11
 shortuuid==0.4.2
 voluptuous==0.8.7
-Flask-Security
+
