--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-RESTful==0.3.3
 Flask-SQLAlchemy==1.0
 Flask-Script==2.0.5
 Flask-Security
+Flask-Swagger==0.2.12
 Flask-WTF==0.11
 Flask==0.10.1
 SQLAlchemy==0.9.8
