--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Flask==0.10.1
 Flask-Admin==1.3
 Flask-BabelEx==0.9.2
 Flask-Config-Helper
@@ -8,21 +9,21 @@ Flask-Marshmallow==0.6.2
 Flask-Migrate==1.4.0
 Flask-OAuthlib==0.9.1
 Flask-RESTful==0.3.3
-Flask-SQLAlchemy==1.0
 Flask-Script==2.0.5
 Flask-Security
+Flask-SQLAlchemy==1.0
 Flask-Swagger==0.2.12
 Flask-WTF==0.11
-Flask==0.10.1
-SQLAlchemy==0.9.8
-Werkzeug==0.10.4
 flatdict==1.2.0
 gunicorn==19.3.0
 inflection==0.3.1
 marshmallow-sqlalchemy==0.8.0
 psycopg2==2.6.1
+psycopg2==2.6.1
 python-dateutil==2.4.2
 pyyaml==3.11
 shortuuid==0.4.2
+SQLAlchemy==0.9.8
 voluptuous==0.8.7
-
+Werkzeug==0.10.4
+-e git+https://github.com/yoophi/flask-swagger-ui.git@09476cf18c0a687e4c99a9d5f6d799bef239a648#egg=Flask_Swagger_UI
