--- a/client/bower.json
+++ b/client/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "todo",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
@@ -9,13 +9,14 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "oauth-ng": "~0.4.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "clientApp",
+  "moduleName": "todoApp",
   "overrides": {
     "bootstrap": {
       "main": [
