--- a/client/bower.json
+++ b/client/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "oauth-ng": "~0.4.6"
+    "oauth-ng": "~0.4.6",
+    "angular-ui-sortable": "^0.14.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
